# legal-document-indexer

./: .env.example  .gitignore  Cargo.toml
src/: app_config.rs  main.rs  utils.rs
src/db_operation/: mod.rs  onchain_divisions.rs  onchain_documents.rs  onchain_officers.rs  onchain_positions.rs
src/event_handler/: division_manager.rs  document_manager.rs  mod.rs  officer_manager.rs  position_manager.rs
src/sql/: create_table.sql  drop_tables.sql
src/sql/document/: create_document.sql
src/sql/officer/: create_officer.sql  query_password.sql
src/sql/onchain_divisions/: insert_onchain_division.sql
src/sql/onchain_documents/: insert_document_signatures.sql  insert_onchain_document.sql
src/sql/onchain_officers/: insert_onchain_officer.sql  query_finalization.sql
src/sql/onchain_positions/: insert_onchain_position.sql
