[package]
name = "legal-document-indexer"
version = "0.1.0"
edition = "2021"
default-run = "legal-document-indexer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
config = "0.13.1"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-postgres = "0.7.6"
derive_more = "0.99.17"
ethers = "2.0.10"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5.0"
